// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeSerialization should write serializer for A 1`] = `
"forall X -> tuple __tact_set(tuple x, X v, int i) asm "SETINDEXVARQ";

forall X -> X __tact_not_null(X x) { throw_if(14, null?(x)); return x; }

(slice, slice) __tact_load_address(slice cs) inline {
    slice raw = cs~load_msg_addr();
    return (cs, raw);
}

builder __tact_store_address(builder b, slice address) inline {
    b = b.store_slice(address);
    return b;
}

slice __tact_compute_contract_address(int chain, cell code, cell data) {
    var b = begin_cell();
    b = b.store_uint(0, 2);
    b = b.store_uint(3, 2);
    b = b.store_uint(0, 1);
    b = b.store_ref(code);
    b = b.store_ref(data);
    var hash = cell_hash(b.end_cell());
    var b2 = begin_cell();
    b2 = b2.store_uint(2, 2);
    b2 = b2.store_uint(0, 1);
    b2 = b2.store_int(chain, 8);
    b2 = b2.store_uint(hash, 256);
    return b2.end_cell().begin_parse();
}

forall X -> tuple __tact_to_tuple(X x) impure asm "NOP";

forall X -> X __tact_from_tuple(tuple x) impure asm "NOP";

(cell, ()) __tact_dict_set_int_cell(cell d, int kl, int k, cell v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, v), ());
    }
}

(cell, ()) __tact_dict_set_int_int(cell d, int kl, int k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, begin_cell().store_int(v, vl).end_cell()), ());
    }
}

builder __gen_write_A(builder build_0, int v'a, int v'b, int v'c, int v'd, int v'e, int v'f, int v'g) inline {
    build_0 = store_int(build_0, v'a, 257);
    build_0 = store_int(build_0, v'b, 257);
    if (null?(v'c)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'c, 257);
    }
    build_0 = store_int(build_0, v'd, 1);
    if (null?(v'e)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'e, 1);
    }
    var build_1 = begin_cell();
    build_1 = store_int(build_1, v'f, 257);
    build_1 = store_int(build_1, v'g, 257);
    build_0 = store_ref(build_0, build_1.end_cell());
    return build_0;
}

cell __gen_writecell_A(int v'a,int v'b,int v'c,int v'd,int v'e,int v'f,int v'g) inline {
    return __gen_write_A(begin_cell(), v'a, v'b, v'c, v'd, v'e, v'f, v'g).end_cell();
}

slice __gen_writeslice_A(int v'a,int v'b,int v'c,int v'd,int v'e,int v'f,int v'g) inline {
    return __gen_writecell_A(v'a, v'b, v'c, v'd, v'e, v'f, v'g).begin_parse();
}

(slice, (int, int, int, int, int, int, int)) __gen_read_A(slice sc) inline {
    var a = sc~load_int(257);
    var b = sc~load_int(257);
    var c = null();
    if (sc~load_int(1)) {
        var c = sc~load_int(257);
    }
    var d = sc~load_int(1);
    var e = null();
    if (sc~load_int(1)) {
        var e = sc~load_int(1);
    }
    sc = (sc~load_ref()).begin_parse();
    var f = sc~load_int(257);
    var g = sc~load_int(257);
    return (sc, (a, b, c, d, e, f, g));
}"
`;

exports[`writeSerialization should write serializer for B 1`] = `
"forall X -> tuple __tact_set(tuple x, X v, int i) asm "SETINDEXVARQ";

forall X -> X __tact_not_null(X x) { throw_if(14, null?(x)); return x; }

(slice, slice) __tact_load_address(slice cs) inline {
    slice raw = cs~load_msg_addr();
    return (cs, raw);
}

builder __tact_store_address(builder b, slice address) inline {
    b = b.store_slice(address);
    return b;
}

slice __tact_compute_contract_address(int chain, cell code, cell data) {
    var b = begin_cell();
    b = b.store_uint(0, 2);
    b = b.store_uint(3, 2);
    b = b.store_uint(0, 1);
    b = b.store_ref(code);
    b = b.store_ref(data);
    var hash = cell_hash(b.end_cell());
    var b2 = begin_cell();
    b2 = b2.store_uint(2, 2);
    b2 = b2.store_uint(0, 1);
    b2 = b2.store_int(chain, 8);
    b2 = b2.store_uint(hash, 256);
    return b2.end_cell().begin_parse();
}

forall X -> tuple __tact_to_tuple(X x) impure asm "NOP";

forall X -> X __tact_from_tuple(tuple x) impure asm "NOP";

(cell, ()) __tact_dict_set_int_cell(cell d, int kl, int k, cell v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, v), ());
    }
}

(cell, ()) __tact_dict_set_int_int(cell d, int kl, int k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, begin_cell().store_int(v, vl).end_cell()), ());
    }
}

builder __gen_write_B(builder build_0, int v'a, int v'b, int v'c, int v'd, int v'e, int v'f, int v'g) inline {
    build_0 = store_int(build_0, v'a, 257);
    build_0 = store_int(build_0, v'b, 257);
    if (null?(v'c)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'c, 257);
    }
    build_0 = store_int(build_0, v'd, 1);
    if (null?(v'e)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'e, 1);
    }
    var build_1 = begin_cell();
    build_1 = store_int(build_1, v'f, 257);
    build_1 = store_int(build_1, v'g, 257);
    build_0 = store_ref(build_0, build_1.end_cell());
    return build_0;
}

cell __gen_writecell_B(int v'a,int v'b,int v'c,int v'd,int v'e,int v'f,int v'g) inline {
    return __gen_write_B(begin_cell(), v'a, v'b, v'c, v'd, v'e, v'f, v'g).end_cell();
}

slice __gen_writeslice_B(int v'a,int v'b,int v'c,int v'd,int v'e,int v'f,int v'g) inline {
    return __gen_writecell_B(v'a, v'b, v'c, v'd, v'e, v'f, v'g).begin_parse();
}

(slice, (int, int, int, int, int, int, int)) __gen_read_B(slice sc) inline {
    var a = sc~load_int(257);
    var b = sc~load_int(257);
    var c = null();
    if (sc~load_int(1)) {
        var c = sc~load_int(257);
    }
    var d = sc~load_int(1);
    var e = null();
    if (sc~load_int(1)) {
        var e = sc~load_int(1);
    }
    sc = (sc~load_ref()).begin_parse();
    var f = sc~load_int(257);
    var g = sc~load_int(257);
    return (sc, (a, b, c, d, e, f, g));
}"
`;

exports[`writeSerialization should write serializer for C 1`] = `
"forall X -> tuple __tact_set(tuple x, X v, int i) asm "SETINDEXVARQ";

forall X -> X __tact_not_null(X x) { throw_if(14, null?(x)); return x; }

(slice, slice) __tact_load_address(slice cs) inline {
    slice raw = cs~load_msg_addr();
    return (cs, raw);
}

builder __tact_store_address(builder b, slice address) inline {
    b = b.store_slice(address);
    return b;
}

slice __tact_compute_contract_address(int chain, cell code, cell data) {
    var b = begin_cell();
    b = b.store_uint(0, 2);
    b = b.store_uint(3, 2);
    b = b.store_uint(0, 1);
    b = b.store_ref(code);
    b = b.store_ref(data);
    var hash = cell_hash(b.end_cell());
    var b2 = begin_cell();
    b2 = b2.store_uint(2, 2);
    b2 = b2.store_uint(0, 1);
    b2 = b2.store_int(chain, 8);
    b2 = b2.store_uint(hash, 256);
    return b2.end_cell().begin_parse();
}

forall X -> tuple __tact_to_tuple(X x) impure asm "NOP";

forall X -> X __tact_from_tuple(tuple x) impure asm "NOP";

(cell, ()) __tact_dict_set_int_cell(cell d, int kl, int k, cell v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, v), ());
    }
}

(cell, ()) __tact_dict_set_int_int(cell d, int kl, int k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, begin_cell().store_int(v, vl).end_cell()), ());
    }
}

builder __gen_write_C(builder build_0, cell v'a, cell v'b, slice v'c, slice v'd, int v'e, int v'f, int v'g, slice v'h) inline {
    build_0 = store_ref(build_0, v'a);
    if (null?(v'b)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_ref(build_0, v'b);
    }
    if (null?(v'c)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_ref(build_0, v'c.end_cell());
    }
    var build_1 = begin_cell();
    if (null?(v'd)) {
        build_1 = store_int(build_1, false, 1);
    } else {
        build_1 = store_int(build_1, true, 1);
        build_1 = store_ref(build_1, v'd.end_cell());
    }
    build_1 = store_int(build_1, v'e, 1);
    build_1 = store_int(build_1, v'f, 257);
    build_1 = store_int(build_1, v'g, 257);
    build_1 = __tact_store_address(build_1, v'h);
    build_0 = store_ref(build_0, build_1.end_cell());
    return build_0;
}

cell __gen_writecell_C(cell v'a,cell v'b,slice v'c,slice v'd,int v'e,int v'f,int v'g,slice v'h) inline {
    return __gen_write_C(begin_cell(), v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h).end_cell();
}

slice __gen_writeslice_C(cell v'a,cell v'b,slice v'c,slice v'd,int v'e,int v'f,int v'g,slice v'h) inline {
    return __gen_writecell_C(v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h).begin_parse();
}

(slice, (cell, cell, slice, slice, int, int, int, slice)) __gen_read_C(slice sc) inline {
    var a = sc~load_ref();
    var b = null();
    if (sc~load_int(1)) {
        var b = sc~load_ref();
    }
    var c = null();
    if (sc~load_int(1)) {
        var c = sc~load_ref().begin_parse();
    }
    sc = (sc~load_ref()).begin_parse();
    var d = null();
    if (sc~load_int(1)) {
        var d = sc~load_ref().begin_parse();
    }
    var e = sc~load_int(1);
    var f = sc~load_int(257);
    var g = sc~load_int(257);
    var h = sc~__tact_load_address();
    return (sc, (a, b, c, d, e, f, g, h));
}"
`;
